--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.4.2",
     "typescript": "~2.0.0"
+  },
+  "engines": {
+    "node": ">=6.9.0"
   }
 }
